<resources>
    <string name="app_name">KotlinTrip</string>
    <string name="notification_channel_id">default</string>
    <string name="action_settings">Settings</string>

    <string name="str_enter_project_name">Enter Project Name</string>
    <string name="str_enter_project_description">Enter Project Description</string>
    <string name="str_enter_expense">Enter Expense</string>
    <string name="str_enter_member_detail">Enter Member Detail</string>
    <string name="str_enter_member_name">Enter Member Name</string>
    <string name="str_enter_member_email_id">Enter Member Email Id</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_add">Add</string>
    <string name="str_update">Update</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_are_you_sure_to_want_to_delete">Are you sure you want to delete?</string>


    <string name="title_activity_main">DateTimePicker Example</string>
    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="selected_datetime">The date and time you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="original_button">Framework Picker</string>
    <string name="pick_datetime">Pick Date+Time</string>
    <string name="mode_24_hours">Use 24 hour mode</string>
    <string name="mode_dark">Use dark theme</string>
    <string name="mode_custom_accent">Use custom accent</string>
    <string name="vibrate">Vibrate on touch</string>
    <string name="dismiss">Dismiss on pause (eg: orientation change)</string>
    <string name="title">Show a title</string>
    <string name="show_version_2">Use marshmallow layout</string>
    <string name="show_year_first">Show the year picker first</string>
    <string name="enable_seconds">Show seconds picker</string>
    <string name="enable_minutes">Show minutes picker</string>
    <string name="limit_times">Limit selectable times</string>
    <string name="limit_dates">Limit selectable dates</string>
    <string name="disable_dates">Disable specific dates</string>
    <string name="disable_times">Disable specific times</string>
    <string name="highlight_dates">Highlight certain dates</string>
    <string name="switch_orientation">Switch scroll orientation</string>

    <string name="tab_title_time">Time</string>
    <string name="tab_title_date">Date</string>
    <string name="tab_title_datetime">Date+Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="mdtp_date_v1_monthyear">MMMM yyyy</string>
    <!-- Pattern for the v2 day month and year string (localised) -->
    <string name="mdtp_date_v2_daymonthyear">EEE, MMM dd</string>

    <!-- Label for date or time [CHAR LIMIT=30] -->
    <string name="mdtp_done_label">Done</string>
    <string name="mdtp_ok">@android:string/ok</string>
    <string name="mdtp_cancel">@android:string/cancel</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_minute_picker_description">Minutes circular slider</string>
    <!--
         Content description for the second selector in the time picker, which displays
         selectable five-second intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="mdtp_second_picker_description">Seconds circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_minutes">Select minutes</string>
    <!-- Accessibility announcement for second circular picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_seconds">Select seconds</string>

    <string name="mdtp_date">Date</string>
    <string name="mdtp_time">Time</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="mdtp_year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="mdtp_select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="mdtp_item_is_selected">%1$s selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="mdtp_deleted_key">%1$s deleted</string>
    <!-- Accessibility announcement for the month arrows in the day picker -->
    <string name="mdtp_next_month_arrow_description">Next Month</string>
    <string name="mdtp_previous_month_arrow_description">Previous Month</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_time_placeholder" translatable="false">00</string>
    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_time_separator" translatable="false">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_radial_numbers_typeface" translatable="false">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_sans_serif" translatable="false">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="mdtp_day_of_week_label_typeface" translatable="false">sans-serif</string>

    <string name="mdtp_am">am</string>
    <string name="mdtp_pm">pm</string>

</resources>
